# avatar_2026

./: .gitignore  README.md
avatar_bringup/: package.xml  setup.cfg  setup.py
avatar_bringup/avatar_bringup/: traj_to_jointstate.py
avatar_bringup/config/follower/: hardware_controller_manager.yaml  initial_positions.yaml
avatar_bringup/config/leader/: hardware_controller_manager.yaml
avatar_bringup/launch/: collison.launch.py  follower.launch.py  gazebo_follower.launch.py  leader.launch.py  rviz_follower.launch.py
avatar_control/: package.xml  setup.cfg  setup.py
avatar_control/avatar_control/src/: bridge_node.py
avatar_description/: CMakeLists.txt  package.xml
avatar_description/gazebo/: follower.gazebo.xacro
avatar_description/launch/: rviz_follower.launch.py
avatar_description/meshes/follower/: base_link.stl  left_link1_1.stl  left_link2_1.stl  left_link3_1.stl  left_link4_1.stl  left_link5_1.stl  left_link6_1.stl  left_link_gripper_1.stl  neck_link1_1.stl  neck_link2_1.stl  right_link1_1.stl  right_link2_1.stl  right_link3_1.stl  right_link4_1.stl  right_link5_1.stl  right_link6_1.stl  right_link_gripper_1.stl
avatar_description/ros2_control/: follower.ros2_control.xacro  leader.ros2_control.xacro
avatar_description/urdf/follower/: debug.urdf  follower.urdf.xacro  follower_arm.urdf.xacro  follower_arm_debug.urdf.xacro
avatar_description/worlds/: follower.world
avatar_driver/: package.xml  setup.cfg  setup.py
avatar_follower/: CMakeLists.txt  package.xml  setup.cfg  setup.py
avatar_follower/avatar_follower/: follower_driver.py  neck_vision_follower_driver.py  safty_stop.py  stop_safety.py
avatar_follower/collision/: collision_node.cpp  collision_node.hpp
avatar_follower/collision(xx)/: collision_node.cpp  collision_node.hpp
avatar_leader/: package.xml  setup.cfg  setup.py
avatar_leader/avatar_leader/plugins/: calibration.py  filters.py  test.py
avatar_vision/: package.xml  setup.cfg  setup.py
avatar_vision/avatar_vision/: angle_pub.py  camera_pub.py  camera_test.py  det_cxcy_node.py  det_sub.py  hand_tracker_node.py  rgb_sub.py  track.py  tracker_node.py  webcam_pub_and_tracker .py  webcam_publisher.py
avatar_vision/avatar_vision_etc/: hand_node.py  webcam_pub_and_tracker .py
ros2_controller/gravity_compensation_controller/: CMakeLists.txt  package.xml
ros2_controller/joint_trajectory_command_broadcaster/: CMakeLists.txt  package.xml
ros2_controller/spring_actuator_controller/: CMakeLists.txt  package.xml
(+7 files in other folders)
